--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
-        <title>XENEO Web Application</title>
+        <title>XENEO - Home</title>
     </h:head>
     <h:body>
-        Hello from Facelets!
+        <ui:composition template="templates/masterLayout.xhtml">            
+            <ui:define name="left">
+                Leftist
+            </ui:define>
+            <ui:define name="right">
+                <div>
+                    <h3>Case Management</h3>
+                    <a href="" onclick="createDialog.show()">Create New case Link</a>
+                    <p:commandButton onclick="createDialog.show()" value="Create new Case" type="button" />                    
+                </div>                
+                
+                <p:dialog id="createDialog" header="Create new Case" widgetVar="createDialog" modal="true">  
+                    <h:outputLabel for="title" value="Title" />
+                    <h:inputText id="title" />
+                    <h:outputLabel for="description" value="Description" />
+                    <h:inputTextarea id="description"  />
+                    <h:outputLabel for="caseType" value="Case Type" />
+                    <h:selectOneListbox id="caseType">
+                        <f:selectItem id="item1" itemLabel="News" itemValue="1" />
+                        <f:selectItem id="item2" itemLabel="Sports" itemValue="2" />
+                    </h:selectOneListbox>
+                    <h:commandButton value="Create Case" />
+                </p:dialog> 
+            </ui:define>
+        </ui:composition>
     </h:body>
 </html>
 
